--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "node-express",
+  "name": "express",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
-    "dev":"nodemon deep"
+    "dev": "nodemon deep"
   },
   "author": "Deepak Patel",
   "license": "ISC",
@@ -16,5 +15,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/deepakp2411/node_help.git"
+  },
+  "bugs": {
+    "url": "https://github.com/deepakp2411/node_help/issues"
+  },
+  "homepage": "https://github.com/deepakp2411/node_help#readme",
+  "description": ""
 }
